@@ -62,3 +62,9 @@ collation_server=utf8mb4_bin
     - utf8mb4
 - 排序规则
     - utf8mb4_bin
+
+- 环境
+    - VM options
+    ```
+    -XX:PermSize=128m
+    ```
